semester2/object_oriented_programming/tps/projet-court/evaluations/evaluation1/StrategieExpert.java.log
allumettes/StrategieExpert.java:18: error: cannot find symbol
			val = Generateur.nb_Aleatoire(jeu);
			      ^
  symbol:   variable Generateur
  location: class StrategieExpert
1 error
